# graph-pruning

./: CMakeLists.txt  README.md  compile_projects.sh  runTests.sh
mylib/cpp/: CMakeLists.txt
mylib/cpp/graph/: CMakeLists.txt  Generator.cpp  Graph.cpp
mylib/cpp/graph/algorithm/: CMakeLists.txt  Centrality.cpp  Traversal.cpp
mylib/cpp/graph/algorithm/test/: CMakeLists.txt  testTraversal.cpp
mylib/cpp/graph/test/: CMakeLists.txt  testGraph.cpp
mylib/cpp/simulation/: CMakeLists.txt  Pruning.cpp
mylib/cpp/simulation/test/: CMakeLists.txt  testPruning.cpp
mylib/cpp/structures/: CMakeLists.txt  UnionFind.cpp
mylib/cpp/structures/test/: CMakeLists.txt  testUnionFind.cpp
mylib/include/mylib/: stdafx.h
mylib/include/mylib/graph/: Generator.hpp  Graph.hpp
mylib/include/mylib/graph/algorithm/: Centrality.hpp  Traversal.hpp
mylib/include/mylib/random/PCG64/: RandomNumber.hpp
mylib/include/mylib/random/XORShift/: Random.hpp  RandomNumber.hpp  WeightedSampling.hpp  XORShift.hpp
mylib/include/mylib/simulation/: Pruning.hpp
mylib/include/mylib/structures/: UnionFind.hpp
src/: CMakeLists.txt  kcorePercolation.cpp  kqcorePercolation.cpp
